--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 
 
     <string name="Inventory">Inventory</string>
+    <string name="goToInventory">You can collect more treasures or go to your Inventory and deliver treasure to Bloom!</string>
     <string name="Scan">Scan</string>
 
 
@@ -41,6 +42,9 @@
 
 
     <string name="map">Map</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
